app_yaml/redis_yaml/13.redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cli
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      #annotations:
        #sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
