app_yaml/redis_yaml/12.redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
    service: redis
spec:
  ports:
  - port: 6379
    name: http
  selector:
    app: redis
