app_yaml/redis_yaml/22.redis-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc2
  labels:
    app: redis2
    service: redis2
spec:
  ports:
  - port: 6379
    name: http
  selector:
    app: redis2
