app_yaml/redis_yaml/24.redis-dr.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "redis2"
spec:
  #host: "redis-svc2"
  host: "redis-svc2.dev-istio.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
